fix loi anh khong hien thi

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                     <div class="row tour_places">
                         <div class="place_iteam column column_third">
-                            <img src="/assets/image/tour_place/newyork.jpg" alt="NEW YORK" class="tour_img">
+                            <img src="./assets/image/tour_place/newyork.jpg" alt="NEW YORK" class="tour_img">
                             <div class="place_content">
                                 <h4 class="place_heading">New york</h3>
                                 <p class="place_time">Fri 27 Nov 2025</p>
@@ -98,7 +98,7 @@
                         </div>
 
                         <div class="place_iteam column column_third">
-                            <img src="/assets/image/tour_place/paris.jpg" alt="NEW YORK" class="tour_img">
+                            <img src="./assets/image/tour_place/paris.jpg" alt="NEW YORK" class="tour_img">
                             <div class="place_content">
                                 <h4 class="place_heading">Paris</h3>
                                 <p class="place_time">Sat 28 Nov 2025</p>
@@ -108,7 +108,7 @@
                         </div>
 
                         <div class="place_iteam column column_third">
-                            <img src="/assets/image/tour_place/sanfran.jpg" alt="NEW YORK" class="tour_img">
+                            <img src="./assets/image/tour_place/sanfran.jpg" alt="NEW YORK" class="tour_img">
                             <div class="place_content">
                                 <h4 class="place_heading">San fransico</h3>
                                 <p class="place_time">Sun 29 Nov 2025</p>
@@ -194,7 +194,7 @@
             </div>
 
             <div class="map_section">
-                <img src="/assets/image/map/map.jpg" alt="Map">
+                <img src="./assets/image/map/map.jpg" alt="Map">
             </div>
         </div>
 
